--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Latihan GIT</title>
   </head>
   <body>
+    <header>Disini adalah header</header>
     <h1>PT Maju Sejahtera</h1>
     <div>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio asperiores
       perspiciatis animi libero facilis ab voluptatem laborum at vel aperiam
       fugit maxime cum, quasi rerum placeat veniam blanditiis facere debitis!
     </div>
+    <footer>Ini adalah footer</footer>
   </body>
 </html>
