--- a/contact-us.html
+++ b/contact-us.html
@@ -10,5 +10,6 @@
     <h1>PT Maju Sejahtera</h1>
     <div>Ini adalah halaman contact berisi form dan maps..</div>
     <footer>Ini adalah footer</footer>
+    <form action=""></form>
   </body>
 </html>
