--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,7 @@
     <header>Disini adalah header</header>
     <h1>PT Maju Sejahtera</h1>
     <div>Ini adalah halaman contact berisi form dan maps..</div>
+    <div>Contoh perubahan baris 12</div>
     <footer>Ini adalah footer</footer>
   </body>
 </html>
